objects/PCM_Historical_Yield_Data__c.object
<CustomObject>
    <description>PCM Historical Yield Data</description>
    <fields>
        <fullName>ACCT_MONTH__c</fullName>
        <description>Sample data :
Q1
Corresponds to ACCT_MONTH char(2) NOT NULL column in pcm.vol_proj table</description>
        <label>ACCT MONTH</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_YEAR__c</fullName>
        <description>Sample data :
PCM215
Corresponds to ACCT_YEAR char(4) NOT NULL column in pcm.vol_proj table</description>
        <label>ACCT YEAR</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_BI_Yields__c</fullName>
        <formula>IF(BA_Yield__c&lt;1, &quot;0&quot;&amp; Text(BA_Yield__c), Text(BA_Yield__c))  &amp; &quot;/&quot; &amp; 
IF(BI_Yield__c&lt;1, &quot;0&quot;&amp; Text(BI_Yield__c), Text(BI_Yield__c))</formula>
        <label>BA/ BI Yields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Yield__c</fullName>
        <label>BA Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BEOL_POST_Yield__c</fullName>
        <label>BEOL POST Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BEOL_PRE_POST__c</fullName>
        <formula>IF(BEOL_PRE_Yield__c&lt;1, &quot;0&quot;&amp; Text(BEOL_PRE_Yield__c), Text(BEOL_PRE_Yield__c))  &amp; &quot;/&quot; &amp; 
IF(BEOL_POST_Yield__c&lt;1, &quot;0&quot;&amp; Text(BEOL_POST_Yield__c), Text(BEOL_POST_Yield__c))</formula>
        <label>BEOL PRE/ POST Yields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEOL_PRE_Yield__c</fullName>
        <label>BEOL PRE Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BI_Yield__c</fullName>
        <label>BI Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPW__c</fullName>
        <label>CPW</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRA__c</fullName>
        <label>CRA</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRD_TEST_Yield__c</fullName>
        <label>CRD TEST Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Volumes__c</fullName>
        <label>Exit Volumes</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEOL_Yield__c</fullName>
        <label>FEOL Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCPW__c</fullName>
        <label>GCPW</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMPW__c</fullName>
        <label>GMPW</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_DATE_Time_Stamp__c</fullName>
        <label>LAST DATE Time Stamp</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYH__c</fullName>
        <label>LYH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCM_Historical_Solution_ID__c</fullName>
        <formula>PCM_Historical_Solution__r.Solution_Id__c</formula>
        <label>PCM Historical Solution ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCM_Historical_Solution__c</fullName>
        <label>PCM Historical Solution</label>
        <referenceTo>PCM_Historical_Solution__c</referenceTo>
        <relationshipLabel>Historical Yield Data</relationshipLabel>
        <relationshipName>PCM_Historical_Yield_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PLAN_ID__c</fullName>
        <description>Sample data :
PCM215
Corresponds to PLAN_ID char(6) NOT NULL column in pcm.vol_proj table</description>
        <label>PLAN ID</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUB_SOL_Quantity__c</fullName>
        <description>SUB_SOL_QTY</description>
        <label>SUB SOL Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Solution_ID__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sample data :
0
1
Corresponds to SUB_SOL_ID int NOT NULL column in pcm.vol_proj table</description>
        <label>Sub Solution ID</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCA_BI_Yield__c</fullName>
        <label>TCA BI Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCA_Test_Yield__c</fullName>
        <label>TCA Test Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCA_Yield__c</fullName>
        <label>TCA Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEST_Yield__c</fullName>
        <label>TEST Yield</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WFT__c</fullName>
        <label>WFT</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YEAR_QTR__c</fullName>
        <formula>ACCT_YEAR__c &amp;  ACCT_MONTH__c</formula>
        <label>YEAR-QTR</label>
        <type>Text</type>
    </fields>
    <label>PCM Historical Yield Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PCM_Historical_Solution__c</columns>
        <columns>NAME</columns>
        <columns>PCM_Historical_Solution_ID__c</columns>
        <columns>Sub_Solution_ID__c</columns>
        <columns>YEAR_QTR__c</columns>
        <columns>BEOL_PRE_POST__c</columns>
        <columns>BA_BI_Yields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCMHY-{0000000}</displayFormat>
        <label>PCM Historical Yield Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PCM Historical Yield Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>